# my-chess-challenge

./: README.md  chess.sh  pyproject.toml  setup_cluster.sh  submit.py
src/: data.py  evaluate.py  model.py  tokenizer_v2.py  train.py  utils.py  warmup.py
